developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

 - ``SELECT`` statements without any ``FROM`` items are no longer executed
   against the ``sys.cluster`` table, but against a virtual table with no
   columns. Queries including ``sys.cluster`` columns but no explicit ``FROM``
   item will now result in a ``ColumnUnknownException``.

 - onModule() method had been removed from io.crate.Plugin interface,
   so createGuiceModules() must be used instead.

 - ``srv`` and ``azure`` are no longer valid configuration options for ``discovery.type``.
   Instead there is a new ``discovery.zen.hosts_provider`` settings which can
   be set to either ``srv`` or ``azure``.

Breaking Changes (Packaging only)
=================================

 - The sigar jar and object files have been moved from ``plugins/sigar`` to
   ``lib/sigar``.

Changes
=======

 - Added support for ``GRANT`` and ``REVOKE`` privileges for accessing the
   cluster. Currently supported privilege types: ``DQL``, ``DML`` and ``DDL``.

 - Added support for client certificate authentication via HBA.

 - Added SSL/TLS support for HTTP endpoints.

 - Added new HBA setting ``ssl`` which allows to control whether
   users have to connect with ssl enabled or disabled.

 - Added SSL/TLS support for PostgreSQL Wire Protocol.

 - Updated Elasticsearch to 5.1.2
 - Extended the output of the  ``EXPLAIN`` statement.

 - Added support for joins on virtual tables.

Fixes
=====

 - Fixed support for range queries on the ``_id`` and ``_uid`` columns, range
   queries on these columns weren't working at all since v2.0.0.
   Issue: https://github.com/crate/crate/issues/5845

 - Fixed an issue on ``RENAME`` a partitioned table which would result in data
   loss if a new table is created with the old name of the renamed table and
   afterwards dropped. Issue: https://github.com/crate/crate/issues/5823